
Changes in Version 0.9-46 (in development)

  o fixed showGrobsBB() and identifyGrob(), was not working for several
    types of grobs.

Changes in Version 0.9-45

  o fixed mouse click events under Linux - was interpreted as Alt click
    when NumLock was active (thanks to Liviu Andronic and Trey Greer).

  o 'autoplay' detects plots from Rcmdr (thanks to Liviu Andronic).

  o playwith.options("time.mode") now defaults to NA, i.e. automatic.
    Its previous default was FALSE.

  o "grob inspector" etc now pads bounding boxes, so it is possible to
    click on straight lines.

  o eliminated "ignoring non-pairlist attributes" warnings.

  o changed select.list() to the cross-platform menu() in autoplay.

Changes in Version 0.9-44

  o Added a "Stop" action to interrupt plotting.

  o Added 'preplot.actions' argument to playwith().

  o A custom 'handler' function can be specified for 'parameters' widgets.

  o Improved demo("clusterApp").

  o Brushing a single data point (line) in a parallel plot now works.

  o "Select from table" to identify points now works in more cases.

  o New function identifyGrob(), returns names of clicked grid-objects.

Changes in Version 0.9-43

  o Fixed bug that caused annotations outside the plot area to fail.

Changes in Version 0.9-42

  o Fixed "protection stack overflow" triggered by resizing grid plots.

  o "Full scale" tools now work with Lattice's "free" scales.

  o Page annotations are now inside Lattice's toplevel viewport.

  o Added a Theme menu for Lattice themes (moved out from Style menu).

Changes in Version 0.9-40

  o Split Latticist out into a new package 'latticist'.

  o Handles plots from the 'vcd' package without falling over.

  o Detects pages of a Lattice plot when 'layout' arg is missing.

Changes in Version 0.9-32

  o Select IDs from Table works correctly when columns are sorted.

  o Latticist reorders factor levels again (when reorder = TRUE),